Adding start script

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.11"
+  },
+  "scripts": {
+    "start": "node src/index.js"
   }
 }
